# docs

./: .gitignore  Makefile  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
docs/: index.md
docs/HOWTOs/: how_to_submit_a_talk.md
docs/meetup/: checklist_for_meetup_organization.md
docs/policies/: acceptable_use_policy.md  terms_of_use.md
