[project]
name = "docs-pyworldwide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-rss-plugin>=1.17.1",
]
